--- a/cloudbuild.yaml
+++ b/cloudbuild.yaml
@@ -16,17 +16,17 @@
   
   - name: gcr.io/cloud-builders/docker
     args:
-      ["build", "-t", "gcr.io/chromatic-hue-367100/demo:$COMMIT_SHA", "."]
+      ["build", "-t", "gcr.io/$PROJECT_ID/demo:$COMMIT_SHA", "."]
 
   - name: "gcr.io/cloud-builders/docker"
-    args: ["push", "gcr.io/chromatic-hue-367100/demo"]
+    args: ["push", "gcr.io/$PROJECT_ID/demo"]
 
   - name: "gcr.io/cloud-builders/gcloud"
     args:
       [
         "run",
         "deploy",
-        "demo",
+        "$PROJECT_ID",
         "--image",
         "gcr.io/chromatic-hue-367100/demo:$COMMIT_SHA",
         "--region",
