fixing commit sha

--- a/cloudbuild.yaml
+++ b/cloudbuild.yaml
@@ -19,7 +19,7 @@
       ["build", "-t", "gcr.io/$PROJECT_ID/demo:$COMMIT_SHA", "."]
 
   - name: "gcr.io/cloud-builders/docker"
-    args: ["push", "gcr.io/$PROJECT_ID/demo"]
+    args: ["push", "gcr.io/$PROJECT_ID/demo:$COMMIT_SHA"]
 
   - name: "gcr.io/cloud-builders/gcloud"
     args:
